# a2llib

./: CMakeLists.txt  LICENSE  LICENSE-3RD-PARTY.md  README.md  vcpkg.json
.github/workflows/: cmake-linux.yml  cmake-windows.yml
a2lexplorer/: CMakeLists.txt
a2lexplorer/src/: a2ldocument.cpp  a2ldocument.h  a2lexplorer.cpp  a2lexplorer.h  a2lexplorer.rc  a2lpropertygrid.cpp  a2lpropertygrid.h  a2lrightpanel.cpp  a2lrightpanel.h  a2ltextcontrol.cpp  a2ltextcontrol.h  a2ltreelist.cpp  a2ltreelist.h  a2lview.cpp  a2lview.h  axispointlist.cpp  axispointlist.h  bloblist.cpp  bloblist.h  calibrationmethodlist.cpp  calibrationmethodlist.h  characteristiclist.cpp  characteristiclist.h  childframe.cpp  childframe.h  compumethodlist.cpp  compumethodlist.h  computablist.cpp  computablist.h  framelist.cpp  framelist.h  functionlist.cpp  functionlist.h  grouplist.cpp  grouplist.h  ifdatalist.cpp  ifdatalist.h  instancelist.cpp  instancelist.h  mainframe.cpp  (+18 more)
include/a2l/: a2lenums.h  a2lfile.h  a2lobject.h  a2lproject.h  a2lstructs.h  a2ltask.h  a2mlblock.h  a2mlobject.h  amldefinition.h  amlmember.h  amlsection.h  axisdescr.h  axispts.h  blob.h  characteristic.h  compareccptemplates.h  comparexcptemplates.h  compumethod.h  computab.h  compuvtab.h  compuvtabrange.h  frame.h  function.h  group.h  ifdatablock.h  ifdataitem.h  instance.h  measurement.h  module.h  overwrite.h  recordlayout.h  structure.h  transformer.h  unit.h
include/a2l/ccp/: addressmapping.h  canparam.h  ccpdatablock.h  checksumparam.h  definedpages.h  dpblob.h  eventgroup.h  kpblob.h  qpblob.h  raster.h  seedkey.h  source.h  tpblob.h
include/a2l/xcp/: clock.h  commonparameters.h  communicationmode.h  daq.h  daqevent.h  daqlist.h  datablock.h  ecustate.h  epparameters.h  event.h  flxbuffer.h  memoryaccess.h  pag.h  page.h  pgm.h  protocol.h  protocollayer.h  segment.h  timecorrelation.h  timestamp.h  timestampcharacteristic.h  timestampresolution.h  xcpdatablock.h  xcponcan.h  xcponflx.h  xcponsimulink.h  xcponsxi.h  xcpontcpip.h  xcponudpip.h  xcponusb.h  xcptimestampresolution.h
script/: boost.cmake  googletest.cmake  utillib.cmake  wxwidgets.cmake
src/: a2lenums.cpp  a2lfile.cpp  a2lflexer.cpp  a2lflexer.l  a2lhelper.cpp  a2lhelper.h  a2lobject.cpp  a2lparser.cpp  a2lparser.hpp  a2lparser.y  a2lproject.cpp  a2lscanner.cpp  a2lscanner.h  a2lstructs.cpp  a2ltask.cpp  a2mlblock.cpp  a2mlflexer.cpp  a2mlflexer.l  a2mlobject.cpp  a2mlparser.cpp  a2mlparser.hpp  a2mlparser.y  a2mlscanner.cpp  a2mlscanner.h  amldefinition.cpp  amlflexer.cpp  amlflexer.l  amlmember.cpp  amlparser.cpp  amlparser.hpp  amlparser.y  amlscanner.cpp  amlscanner.h  amlsection.cpp  axisdescr.cpp  axispts.cpp  blob.cpp  characteristic.cpp  compareccptemplates.cpp  comparexcptemplates.cpp  (+23 more)
src/ccp/: addressmapping.cpp  canparam.cpp  ccpdatablock.cpp  ccpdataflexer.cpp  ccpdataflexer.l  ccpdataparser.cpp  ccpdataparser.hpp  ccpdataparser.y  ccpdatascanner.cpp  ccpdatascanner.h  checksumparam.cpp  definedpages.cpp  dpblob.cpp  eventgroup.cpp  kpblob.cpp  qpblob.cpp  raster.cpp  seedkey.cpp  source.cpp  tpblob.cpp
src/xcp/: clock.cpp  commonparameters.cpp  communicationmode.cpp  daq.cpp  daqevent.cpp  daqlist.cpp  datablock.cpp  ecustate.cpp  epparameters.cpp  event.cpp  flxbuffer.cpp  memoryaccess.cpp  pag.cpp  page.cpp  pgm.cpp  protocol.cpp  protocollayer.cpp  segment.cpp  timecorrelation.cpp  timestamp.cpp  timestampcharacteristic.cpp  timestampresolution.cpp  xcpdatablock.cpp  xcpdataflexer.cpp  xcpdataflexer.l  xcpdataparser.cpp  xcpdataparser.hpp  xcpdataparser.y  xcpdatascanner.cpp  xcpdatascanner.h  xcponcan.cpp  xcponflx.cpp  xcponsimulink.cpp  xcponsxi.cpp  xcpontcpip.cpp  xcponudpip.cpp  xcponusb.cpp  xcptimestampresolution.cpp
test/: CMakeLists.txt  test_a2lhelper.cpp  testaml.cpp  testaml.h  testamltemplate.cpp  testamltemplate.h  testccp.cpp  testccp.h  testparse.cpp  testparse.h  testxcp.cpp  testxcp.h
